

                              Kiji Schema Release Notes

Version 1.0.0-rc4
  * SCHEMA-147. Hide OperatorRowFilter. You should use AndRowFilter or
      OrRowFilter directly.
  * SCHEMA-118. KijiTableLayout constructors are now hidden. Create a new layout
      with KijiTableLayout.newLayout(TableLayoutDesc) or create one updated from
      an old one with KijiTableLayout.createUpdatedLayout(TableLayoutDesc,
      KijiTableLayout).
   * SCHEMA-10. CLI tools use KijiURIs:
      - "kiji ls" flags --instances and --table are remove and inferred
        from URI in --kiji=kiji://...
      - flag --table is no longer; it is superseeded by the table component
        from Kiji URIs.
  * SCHEMA-123. Removed spin-wait from deleteTable in HBaseKiji.
  * SCHEMA-169. Add KijiPager class that allows users to easily paginate and
      iterate over values from a column while reading from a KijiTable.
  * SCHEMA-99. KijiConfiguration removed. Use a KijiURI paired with a
      hadoop Configuration object instead.
  * SCHEMA-155. Merged methods in KijiAdmin into Kiji.
  * SCHEMA-133. Introduce KijiDataRequestBuilder class. KijiDataRequest
      objects are now immutable. Construct one with KijiDataRequest.create(),
      or call KijiDataRequest.builder() to get a KijiDataRequestBuilder.
  * SCHEMA-102. Removed overloaded variety of toHBaseFilter that accepted a
      ColumnNameTranslator.
  * SCHEMA-82. KijiCell is now the uniquely located cell in a table with
      family, qualifier, and timestamp.  KijiCounters no longer exist and
      are represented as KijiCell<Long> with no writer schema instead.
  * SCHEMA-143. KijiURI constructors are now hidden.  KijiURIs should be built
      with KijiURIBuilders.
  * SCHEMA-109. KijiInstaller is no longer static.  Get an instance of it with
      KijiInstaller.get().

Version 1.0.0-rc3
  * SCHEMA-83. Added containsCell method to KijiRowData.
  * SCHEMA-154. KijiAdmin is now an interface. Use Kiji.getAdmin() to
      get an instance.