@@ -3,13 +3,14 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc4
+  * SCHEMA-119. Remove TableLayoutSerializer class.
   * SCHEMA-147. Hide OperatorRowFilter. You should use AndRowFilter or
       OrRowFilter directly.
   * SCHEMA-118. KijiTableLayout constructors are now hidden. Create a new layout
       with KijiTableLayout.newLayout(TableLayoutDesc) or create one updated from
       an old one with KijiTableLayout.createUpdatedLayout(TableLayoutDesc,
       KijiTableLayout).
-   * SCHEMA-10. CLI tools use KijiURIs:
+  * SCHEMA-10. CLI tools use KijiURIs:
       - "kiji ls" flags --instances and --table are remove and inferred
         from URI in --kiji=kiji://...
       - flag --table is no longer; it is superseeded by the table component
